bigdata/canal/kubernetes/canal-adapter-es7-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adapter-rdsidtest-es6
  namespace: canal
  labels:
    app: adapter-rdsidtest-es6
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adapter-rdsidtest-es6
  template:
    metadata:
      labels:
        app: adapter-rdsidtest-es6
    spec:
      containers:
      - image: slpcat/canal-adapter:v1.1.5
        name: adapter-rdsidtest-es6
#        imagePullPolicy: Always
        ports:
        - containerPort: 11110
          protocol: TCP
          name: http1
        - containerPort: 11111
          protocol: TCP
          name: http2
        - containerPort: 11112
          protocol: TCP
          name: http3
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 4000m
            memory: 4Gi
        volumeMounts:
          - name: bootstrap
            mountPath: "/opt/canal-adapter/conf/bootstrap.yml"
            subPath: bootstrap.yml
          - mountPath: /opt/canal-adapter/logs
            name: log
      volumes:
      - name: bootstrap
        configMap:
          name: canal-adapter-configmap
          #Add ConfigMap data to a specific path in the Volume
          items:
          - key: bootstrap.yml
            path: bootstrap.yml
      - name: log
        emptyDir: {}
      securityContext:
        runAsUser: 0
