bigdata/canal/kubernetes/canal-server-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: canal-server
  namespace: canal
  labels:
    k8s-app: canal-server
spec:
  replicas: 3
  
  selector:
    matchLabels:
      k8s-app: canal-server
  serviceName: canal-server-hs
  template:
    metadata:
      labels:
        k8s-app: canal-server
    spec:
      terminationGracePeriodSeconds: 600 #k8s将会给应用发送SIGTERM信号，可以用来正确、优雅地关闭应用,默认为30秒
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: "k8s-app"
                    operator: In
                    values:
                      - canal-server
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: canal-server
          #image: registry.cn-hangzhou.aliyuncs.com/yalong_lee_release/canal-server:v1.1.4
          image: slpcat/canal-server:v1.1.5
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 500m
              memory: 2Gi
          ports:
            - containerPort: 11110
              name: admin-port
            - containerPort: 11111
              name: canal-port
            - containerPort: 11112
              name: metrics-port
          volumeMounts:
            - mountPath: /opt/canal-server/logs
              name: log
      volumes:
      - name: log
        emptyDir: {}
