bigdata/canal/kubernetes/zookeeper.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: zk-svc
  namespace: canal
  labels:
    app: zk-svc
spec:
  ports:
  - port: 2888
    name: server
  - port: 3888
    name: leader-election
  clusterIP: None
  selector:
    app: zk
---
apiVersion: v1
kind: Service
metadata:
  name: zk-cs
  namespace: canal
  labels:
    app: zk
spec:
  ports:
    - port: 2181
      name: client
  selector:
    app: zk
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zk
  namespace: canal
spec:
  selector:
    matchLabels:
      app: zk
  serviceName: zk-svc
  replicas: 3
  template:
    metadata:
      labels:
        app: zk
      annotations:
        #disable istio sidecar injection
        sidecar.istio.io/inject: "false"
    spec:
      securityContext:
        runAsUser: 1000
        fsGroup: 1000
      containers:
      - name: k8szk
        imagePullPolicy: Always
        image: slpcat/zookeeper:v3.4.14-alpine
        resources:
          requests:
            memory: "1Gi"
            cpu: "500m"
          limits:
            cpu: 2
            #nvidia.com/gpu: 1
            memory: 4Gi
        ports:
        - containerPort: 2181
          name: client
        - containerPort: 2888
          name: server
        - containerPort: 3888
          name: leader-election
        command:
        - sh
        - -c
        - zkGenConfig.sh && zkServer.sh start-foreground
        readinessProbe:
          exec:
            command:
            - "zkOk.sh"
          initialDelaySeconds: 10
          timeoutSeconds: 5
        livenessProbe:
          exec:
            command:
            - "zkOk.sh"
          initialDelaySeconds: 10
          timeoutSeconds: 5
        volumeMounts:
        - name: datadir
          mountPath: /var/lib/zookeeper
  volumeClaimTemplates:
  - metadata:
      name: datadir
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 20Gi
